gitops/nonprod/overlays/staging/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdb-estimator-frontend-public
  labels:
    app.kubernetes.io/name: cdb-estimator-frontend-public
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'devdpdtsstncom' is provisioned by the cluster platform.
    - secretName: devdpdtsstncom
      hosts:
        - cdb-estimator-staging.dev-dp.dts-stn.com
  rules:
    - host: cdb-estimator-staging.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdb-estimator-frontend
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdb-estimator-frontend-internal
  labels:
    app.kubernetes.io/name: cdb-estimator-frontend-internal
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'devdpinternaldtsstncom' is provisioned by the cluster platform.
    - secretName: devdpinternaldtsstncom
      hosts:
        - cdb-estimator-staging.dev-dp-internal.dts-stn.com
  rules:
    - host: cdb-estimator-staging.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdb-estimator-frontend
                port:
                  name: http
